--- a/multi/text.html
+++ b/multi/text.html
@@ -31,15 +31,16 @@
     <header class="header">
       <div role="navigation" class="navbar navbar-default">
         <div class="container">
-          <div class="navbar-header"><a href="index.html" class="navbar-brand">Multi.</a>
+          <div class="navbar-header"><a href="index.html" class="navbar-brand">Repair Cafe Harderwijk</a>
             <div class="navbar-buttons">
               <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="fa fa-align-justify"></i></button>
             </div>
           </div>
           <div id="navigation" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Home</a></li>
-              <li><a href="text.html">Text page</a></li>
+              <li class="active"><a href="index.php">Home</a></li>
+              <li><a href="repair.php">Reparatie</a></li>
+              <!-- <li><a href="text.html">Text page</a></li>
               <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Dropdown item 1</a></li>
@@ -47,8 +48,8 @@
                   <li><a href="#">Dropdown item 3</a></li>
                   <li><a href="#">Dropdown item 4</a></li>
                 </ul>
-              </li>
-              <li><a href="contact.html">Contact</a></li>
+              </li> -->
+              <li><a href="contact.php">Contact</a></li>
             </ul><a href="#" data-toggle="modal" data-target="#login-modal" class="btn navbar-btn btn-ghost"><i class="fa fa-sign-in"></i>Log in</a>
           </div>
         </div>
